--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -23,6 +23,19 @@ spec:
       port: {{ .Values.env.rconPort | int }}
       targetPort: rcon-port
       protocol: TCP
+    {{- elseif eq "ClusterIP" .Values.serviceType }}
+    - name: game-port
+      port: {{ .Values.env.gamePort | int }}
+      targetPort: game-port
+      protocol: UDP
+    - name: query-port
+      port: {{ .Values.env.queryPort | int }}
+      targetPort: query-port
+      protocol: UDP
+    - name: rcon-port
+      port: {{ .Values.env.rconPort | int }}
+      targetPort: rcon-port
+      protocol: TCP
     {{- else }}
     - name: game-port
       port: {{ .Values.env.gamePort | int }}
